# SingleCEllSightAnnotator

./: .env.example  README.md  app_gradio.py
data/examples/: findallmarkers_example.csv
data/knowledge/: build_reference_db_from_panglaodb.py
outputs/: 70f9cb2d-a402-4832-ac15-c42f0f8e63b9_annotation_results.csv
src/cell_annotator/: main.py
src/cell_annotator/knowledge/: marker_db.py
src/cell_annotator/nodes/: adjudicate.py  finalize.py  persist.py  qc.py
src/cell_annotator/utils/: gene_normalization.py  scoring.py
src/cell_type_annotation_agent.egg-info/: requires.txt
tests/: README.md  pyproject.toml  test_gene_normalization.py  test_graph_smoke.py  test_scoring.py
tests/data/examples/: marker_list_simple.tsv
tests/data/knowledge/: curated_markers_human.json  curated_markers_v1.json
tests/outputs/: 25f3939b-0c1d-46bd-b14f-26ea2f5fc756_annotation_results.csv  46341a57-ff8f-421d-8ddf-ff600c71d2b0_annotation_results.csv
tests/src/cell_annotator/: config.py  graph.py  prompts.py  schemas.py  state.py
tests/src/cell_annotator/nodes/: ingest.py  normalize.py  retrieve.py  review.py  score.py  validate.py
tests/src/cell_annotator/utils/: evidence.py  io.py  qc.py
tests/src/cell_type_annotation_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
